--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,7 +3,7 @@ nixPkgs = ["nodejs-18_x"]
 
 [phases.install]
 cmds = [
-  "cd backend && npm install --production"
+  "cd backend && npm install --omit=dev"
 ]
 
 [phases.build]
